prusti-tests/tests/verify/ui/calls.stderr
error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/calls.rs:28:5
   |
28 |     assert!(z == 5);
   |     ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/calls.rs:35:9
   |
35 |         result == 3     // test that we get correct span information
   |         ^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/calls.rs:43:1
   |
43 | / fn test_max3() -> i32 {
44 | |     let a = 4;
45 | |     let b = 3;
46 | |     max(a, b)
47 | | }
   | |_^

error: aborting due to 2 previous errors

